...G...... [ZBXNEXT-689] added protocol option to net.dns and net.dns.query keys to enable tcp based queries (wiper)
...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)

Bug fixes:
..F....... [ZBX-8922] fixed form element positioning issues in host add/edit form (arvids)
..F....... [ZBX-8934] removed translation for the bytes unit prefixes (KB, MB, etc) (arvids)
..F....... [ZBX-8888] fixed history.php showing data for 11 more seconds than the defined interval (arvids)
..F.....S. [ZBX-9005] fixed aggregate item check to make forth parameter not mandatory when third parameter is set to 'last' (igors)
...G...... [ZBX-3437] fixed Windows agent to use the configured timeout option when estabilishing tcp connection (wiper)
........S. [ZBX-8542] improved performance and reduced configuration cache locking when evaluating trigger expressions (wiper)
...G...PS. [ZBX-8470] fixed possible crash condition in agent, proxy and server daemons where a memory corruption might occur during module unloading (Juris)
..F....... [ZBX-8780] removed hover effect from readonly and disabled fields (arvids)
..F....... [ZBX-8844] fixed testing LDAP authentication (Krists)
..F.I..... [ZBX-8851] added "-1" and "0" as allowed values for "max_execution_time" and "max_input_time" PHP configuration settings (Krists)
A.F....... [ZBX-8720] fixed resolving of macros in graph names when graph name contains strings similar to macros (Krists)
.......PS. [ZBX-6163] added session restoring to MySQL connections in case of losing connection to the database (Juris)
...G...PS. [ZBX-8761] fixed potential lockup if signal is received during message logging (igors)
...G...... [ZBX-8837] added bypassing of DNS resolver cache on Windows systems for net.dns items (wiper)